# predictables-app

.github/workflows/: publish_docker_image.yml
api/: Dockerfile  README.md  compose.yml  install_dotfiles  install_rye  install_rye2  pyproject.toml  requirements.txt
api/docker/: predictables-api.Dockerfile
api/src/api/: hasher.py  main.py
api/src/api/models/: __init__.py  plot.py  session.py  transaction.py  user.py
api/src/api/routers/: plots.py  sample_plots.py
api/src/plots/base/: __init__.py  base_plot.py  scatter.py
predictables-flask/: README.md  pyproject.toml
predictables-flask/src/predictables_flask/: __init__.py
ui/: package-lock.json  package.json
